Added Usage, updated stylesheet generator

--- a/teststyle.html
+++ b/teststyle.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="stylesheet" href="stylesheet.php?color=FFE000">
+        <link rel="stylesheet" type="text/css" href="http://random-color-of-the-day.funsite.cz/stylesheet.php">
     </head>
     <body>
-       <div class="com7-back">HHHHH</div> 
+       <div class="com7-back randomColorOfTheDay">HHHHH</div> 
         
     </body>
 </html>
