--- a/teststyle.html
+++ b/teststyle.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="stylesheet" type="text/css" href="http://random-color-of-the-day.funsite.cz/stylesheet.php">
+        <!--<link rel="stylesheet" type="text/css" href="http://random-color-of-the-day.funsite.cz/stylesheet-variables.php">-->
+        <link rel="stylesheet" type="text/css" href="stylesheet-variables.php?color=FFE000">
+        <link rel="stylesheet" type="text/css" href="teststyle.css">
     </head>
     <body>
-       <div class="com7-back randomColorOfTheDay">HHHHH</div> 
+       <div class="randomColorOfTheDay">HHHHH</div> 
         
     </body>
 </html>
