Renamed to Random Color Every Day
Moved docs to GitHub (README.md)

--- a/403.html
+++ b/403.html
@@ -9,8 +9,9 @@
         <link rel="stylesheet" type="text/css" href="http://random-color-of-the-day.funsite.cz/stylesheet-variables.php">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body style="background: var(--randomColorOfTheDay)">
+    <body style="background: var(--randomColorEveryDay)">
         <div style="color: var(--foreground-text); padding: 20px; text-align: center">
+            <h2>Random Color Every Day</h2>
             <h1>Error 403 - Forbidden</h1>
             Return back to <a href="index.php" style="color: var(--foreground-text)">Home Page</a>
         </div>
