--- a/teststyle.html
+++ b/teststyle.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="teststyle.css">
     </head>
     <body>
-       <div class="randomColorOfTheDay">HHHHH</div> 
+       <div class="randomColorEveryDay">HHHHH</div> 
         
     </body>
 </html>
