--- a/teststyle.html
+++ b/teststyle.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <!--<link rel="stylesheet" type="text/css" href="http://random-color-of-the-day.funsite.cz/stylesheet-variables.php">-->
+        <!--<link rel="stylesheet" type="text/css" href="http://randomcoloreveryday.com/stylesheet-variables.php">-->
         <link rel="stylesheet" type="text/css" href="stylesheet-variables.php?color=FFE000">
         <link rel="stylesheet" type="text/css" href="teststyle.css">
     </head>
