--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Random Color Every Day">        
         <link rel="icon" type="image/png" href="color.png" />
 
-        <link rel="stylesheet" type="text/css" href="http://random-color-of-the-day.funsite.cz/stylesheet-variables.php">
+        <link rel="stylesheet" type="text/css" href="http://randomcoloreveryday.com/stylesheet-variables.php">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body style="background: var(--randomColorEveryDay)">
