--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/png" href="color.png" />
 
         <link rel="stylesheet" type="text/css" href="http://randomcoloreveryday.com/stylesheet-variables.php">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.min.css">
     </head>
     <body style="background: var(--randomColorEveryDay)">
         <div style="color: var(--foreground-text); padding: 20px; text-align: center">
