--- a/404.html
+++ b/404.html
@@ -7,13 +7,14 @@
         <link rel="icon" type="image/png" href="color.png" />
 
         <link rel="stylesheet" type="text/css" href="http://randomcoloreveryday.com/stylesheet-variables.php">
-        <link rel="stylesheet" type="text/css" href="style.min.css">
+        <link rel="stylesheet" type="text/css" href="/style.min.css">
     </head>
     <body style="background: var(--randomColorEveryDay)">
         <div style="color: var(--foreground-text); padding: 20px; text-align: center">
             <h2>Random Color Every Day</h2>
             <h1>Error 404 - Page not found</h1>
-            Return back to <a href="index.php" style="color: var(--foreground-text)">Home Page</a>
+            <h4>Or invalid COLOR parameter</h4>
+            Return back to <a href="/" style="color: var(--foreground-text)">Home Page</a>
         </div>
     </body>
 </html>
